[package]
name = "nmtop"
version = "1.0.0"
authors = ["Tobias Maier <tobias@t-maier.de>, Maximilian Leith <maximilian@leith.de>, Niklas Apholz <niklas.apholz@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5"
regex = "1"
